# DocFinder

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  DocFinder.spec  LICENSE  Makefile  README.md  SETUP_GITHUB_ACTIONS.md  check-ci.sh  pyproject.toml
.github/: README.md  copilot-instructions.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml
.github/workflows/: build-desktop.yml  ci.yml  codeql.yml  dependency-review.yml  release.yml  stale.yml
resources/: DocFinder.icns
scripts/: build-linux.sh  build-macos.sh  build-windows.ps1
src/docfinder/: __init__.py  cli.py  config.py  gui.py  models.py  settings.py
src/docfinder/embedding/: encoder.py
src/docfinder/index/: indexer.py  reranker.py  search.py  storage.py
src/docfinder/ingestion/: pdf_loader.py
src/docfinder/rag/: __init__.py  engine.py  llm.py
src/docfinder/utils/: files.py  memory.py  notify.py  text.py
src/docfinder/web/: app.py  frontend.py
src/docfinder/web/templates/: index.html  spotlight.html
tests/: conftest.py  test_cli.py  test_config.py  test_config_extended.py  test_embedding_backend.py  test_embedding_backend_extended.py  test_frontend.py  test_imports.py  test_indexer.py  test_models.py  test_pdf_loader.py  test_rag.py  test_reranker.py  test_search.py  test_settings.py  test_storage.py  test_utils_files.py  test_utils_memory.py  test_utils_notify.py  test_utils_text.py  test_web_app.py  test_web_app_extended.py
