[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "docfinder"
version = "0.1.0"
description = "Local-first semantic search CLI for PDF documents."
authors = [
  { name = "DocFinder Team" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pypdf>=4.2.0",
  "sentence-transformers>=2.6.0",
  "onnxruntime>=1.17.0",
  # pin numpy to <2 to avoid runtime errors with precompiled C-extensions
  # that may not yet be compatible with NumPy 2.x. Projects installing
  # DocFinder from scratch will get a NumPy 1.x compatible release.
  "numpy>=1.26.0,<2",
  "typer[all]>=0.12.0",
  "rich>=13.7.0",
  "tqdm>=4.66.0",
  "mpmath<1.4"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.5.0"
]
web = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "pydantic>=2.9.0"
]

[project.scripts]
docfinder = "docfinder.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"docfinder.web" = ["templates/*.html"]

[tool.typer]
app = "docfinder.cli:app"

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I"]
