[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "docfinder"
version = "0.1.0"
description = "Local-first semantic search CLI for PDF documents."
authors = [
  { name = "DocFinder Team" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pypdf>=4.2.0",
  "sentence-transformers>=2.6.0",
  "onnxruntime>=1.17.0",
  # pin numpy to <2 to avoid runtime errors with precompiled C-extensions
  # that may not yet be compatible with NumPy 2.x. Projects installing
  # DocFinder from scratch will get a NumPy 1.x compatible release.
  "numpy>=1.26.0,<2",
  "typer[all]>=0.12.0",
  "rich>=13.7.0",
  "tqdm>=4.66.0",
  "mpmath<1.4"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.5.0",
  "safety>=3.0.0",
  "bandit[toml]>=1.7.0"
]
web = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "pydantic>=2.9.0"
]

[project.scripts]
docfinder = "docfinder.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"docfinder.web" = ["templates/*.html"]

[tool.typer]
app = "docfinder.cli:app"

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I"]
target-version = "py310"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
  "-v",
  "--strict-markers",
  "--cov=docfinder",
  "--cov-report=term-missing",
  "--cov-report=html",
  "--cov-report=xml",
]

[tool.coverage.run]
source = ["src/docfinder"]
omit = [
  "*/tests/*",
  "*/__pycache__/*",
  "*/site-packages/*",
]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "def __str__",
  "raise AssertionError",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
  "@abstract",
]
precision = 2
show_missing = true

[tool.bandit]
exclude_dirs = ["tests", "build", "dist"]
skips = ["B101", "B601"]
